<resources>
    <string name="app_name">Laba4</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="choose_audio_video_file">Choose Audio/Video File</string>
    <string name="enter_media_url">Enter media URL</string>
    <string name="load_from_internet">Load from Internet</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
</resources>