<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.media3.ui.PlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:use_controller="true"/>

    <RadioGroup
        android:id="@+id/rgMediaType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rbVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnPlay"
        android:text="@string/play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnPause"
        android:text="@string/pause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnStop"
        android:text="@string/stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnChooseFile"
        android:text="@string/choose_audio_video_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etUrl"
        android:hint="@string/enter_media_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnLoadUrl"
        android:text="@string/load_from_internet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>